@@ -4642,6 +4642,8 @@ v0.33.20        10-Feb-2002
 		available, and removes it when it is down.
 		Added test for ISDN/modem lines in use.
 		Lost of code cleanup.
+		No setup setting anymore for maximum POTS and ISDN lines, this
+		is now automatic.
 
 	mbcico:
 		Fixed binkp driver to accept incoming unprotected sessions.
